sass/layout/_newsletter.scss
.newsletter {
  background-image: url("img/map-bg@2x.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  margin-bottom: 2rem;
  padding: 12rem 2rem;
  transition: all linear 0.3s;
  background-blend-mode: darken;

  @media (max-width: 35rem) {
    padding: 2rem;
  }

  @include on-event {
    background-blend-mode: color-burn;
    background-color: lighten($dark-brown, 40%);
    transition: all linear 0.3s;

    .newsletter__heading {
      color: white;
      transition: all linear 0.2s;
    }
    .newsletter__subheading {
      color: rgba(white, 0.85);
      transition: all linear 0.2s;
    }

    .newsletter__label {
      color: rgba(white, 0.85);
      // transition: all linear 0.65s;
    }
  }

  &__heading {
    text-align: center;
    @include sans;
    font-size: 200%;
    margin: 0;
    padding: 0;
  }

  &__subheading {
    text-align: center;
    font-size: 150%;
    margin: 0;
    padding: 0;
    // color: white;
  }

  // The form
  // ----------------------------------------------------------------------------

  $form-element-height: 2.7rem;

  &__form-wrapper {
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin: 4rem 0 1rem 0;

    @media (max-width: 35rem) {
      flex-direction: column;
    }
  }

  &__fieldgroup {
    position: relative;
  }

  &__fieldgroup::before {
    position: absolute;
    top: -1.6rem;
    left: -2.7rem;
    content: "";
    background-image: url("img/icon-flag.svg");
    background-position: left;
    background-repeat: no-repeat;
    height: 3.5rem;
    width: 3.5rem;
    z-index: 10;

    @media (max-width: 500px) {
      display: none;
    }
  }

  &__label {
    @include sans;
    // font-size: 85%;
  }

  &__input,
  input[type="text"],
  input[type="email"],
  input[type="url"] {
    border: none;
    border-radius: 0;
    height: $form-element-height;
    margin-right: 0.75rem;
    padding-left: 1rem;
    min-width: 18rem;
    position: relative;

    @media (max-width: 35rem) {
      min-width: auto;
      min-width: 100%;
    }
  }

  &__alert {
    &--error {
      border: 2px solid red !important;
    }
    &--success {
    }
  }

  &__submit {
    height: $form-element-height;
    // min-height: 3.5rem;

    @media (max-width: 35rem) {
      margin-top: 0.5rem;
    }
  }
}

// Mailchimp styles
// ----------------------------------------------------------------------------

#mc_embed_signup {
  background: transparent;
  clear: left;
  font: 1rem;
}

